# sop-generator

./: .gitignore  LICENSE  QUICKSTART.md  README.md  SECURITY.md  Start-SOPGenerator.ps1  config.json.example  pyproject.toml  requirements.txt  sonar-project.properties  sop_generator.py  start_watch.bat
.github/: pull_request_template.md
.github/workflows/: ci.yml  sonar.yml
docs/: README.md  index.html  styles.css
docs/superpowers/plans/: 2026-05-09-browser-capture-halo-publishing.md
docs/superpowers/specs/: 2026-05-09-browser-capture-halo-publishing-design.md
extension/browser/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
src/sop_generator/: cli.py  drafting.py  models.py  paths.py  publish_bifrost.py  render_halo.py  service.py  steps.py  storage.py
tests/: test_cli_import.py  test_docs.py  test_drafting.py  test_end_to_end.py  test_extension_files.py  test_models.py  test_paths.py  test_publish_bifrost.py  test_render_halo.py  test_service.py  test_steps.py  test_storage.py
