[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-sop-generator"
version = "0.1.0"
description = "Local browser workflow capture and Halo KB SOP publishing."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "pydantic>=2.7",
    "requests>=2.31",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
    "watchdog>=4.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
sop-generator = "sop_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
